--- a/data/blog/code-sample.mdx
+++ b/data/blog/code-sample.mdx
@@ -36,3 +36,7 @@ def fib():
 for index, fibonacci_number in zip(range(10), fib()):
      print('{i:3}: {f:3}'.format(i=index, f=fibonacci_number))
 ```
+- 测试插入图片：
+
+![测试图片](../../public/static/blog_pictures/test.png)
+
