--- a/data/blog/变分自编码器VAE（1）.mdx
+++ b/data/blog/变分自编码器VAE（1）.mdx
@@ -1,7 +1,27 @@
+---
+title: 变分自编码器（1）
+date: '2023-12-1'
+tags: ['VAE','图像生成']
+summary: 变分自编码器介绍
+---
+
 # 变分自编码器VAE（1）
 
 ## 概述
 
 - 变分：分布变换
 - 希望构建一个从隐变量 $Z$ 到目标数据 $X$ 的模型
-- 假设 $Z$ 服从某种常见分布，通过构建一个生成器 $g$ ，使得 $X = g(Z)$
+- 假设 $Z$ 服从某种常见分布，通过构建一个生成器 $g$ ，使得 $X = g(Z)$，这样就可以从常见分布中随机采样然后生成目标数据了
+
+## 实现
+
+- 
+- 假设 $Z$ 服从标准正态分布，则可以从标准正态分布中**随机采样**，来生成符合目标数据分布的图像：
+
+$$
+\hat{X_k} = g(Z_k)
+$$
+
+- 
+- 但是这样存在无法优化的问题，即生成的 $\hat{X_k}$无法确定其 ground_truth 对应目标数据中的哪张图像，因为 $Z$ 是随机采样出来的
+- 
