--- a/data/blog/seckill/2023-11-14-通过秒杀场景学习高并发系列处理方案（2）.mdx
+++ b/data/blog/seckill/2023-11-14-通过秒杀场景学习高并发系列处理方案（2）.mdx
@@ -1,7 +1,7 @@
 ---
 title: 通过秒杀场景学习高并发系列处理方案（2）
 date: '2023-11-14'
-tags: ['领域事件','Cola']
+tags: ['分布式','高并发','领域事件','Cola']
 summary: 通过领域层发布事件，应用层处理实现来解决高并发场景下缓存数据的异步更新
 ---
 
