--- a/data/blog/seckill/2023-11-13-通过秒杀场景学习高并发系列处理方案（1）.mdx
+++ b/data/blog/seckill/2023-11-13-通过秒杀场景学习高并发系列处理方案（1）.mdx
@@ -1,7 +1,7 @@
 ---
 title: 通过秒杀场景学习高并发系列处理方案（1）
 date: '2023-11-13'
-tags: ['分布式','redis','缓存','guava']
+tags: ['高并发','分布式','redis','缓存','guava']
 summary: 混合型缓存结构设计与实现，涉及本地缓存Google Guava、分布式缓存redis、分布式锁redisson
 ---
 
